// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<thead
  className="cf-table__head"
>
  TableHead
</thead>
`;

exports[`should render extra class name 1`] = `
<thead
  className="cf-table__head extra"
>
  TableHead
</thead>
`;
